...
    }
}

val coffeeDrinks = listOf(
    CoffeeDrink(
        id = 1L,
        name = "Americano",
        image = R.drawable.americano_small,
        description = "Americano is a type of coffee drink prepared by diluting an espresso with hot water, giving it a similar strength to, but different flavour from, traditionally brewed coffee. ",
        size = "150 ml",
        price = BigDecimal(6.5)
    ),
    CoffeeDrink(
...
        description = "A cappuccino is an espresso-based coffee drink that originated in Italy, and is traditionally prepared with steamed milk foam.",
        size = "250 ml",
        price = BigDecimal(6.0)
    ),
    CoffeeDrink(
        id = 3L,
        name = "Espresso",
        image = R.drawable.espresso_small,
        description = "Espresso is coffee of Italian origin, brewed by forcing a small amount of nearly boiling water under pressure (expressing) through finely-ground coffee beans.",
        size = "200 ml",
        price = BigDecimal(5.0)
    )
)
...
